# osdev

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  gdb.sh  gdb_init  project_logs.md  qemu-debug.sh  qemu-test.sh
.cargo/: config.toml
.github/workflows/: rust.yml
docrefs/: LINKS.md
src/: board_info.rs  boot.S  boot.rs  interrupt.rs  interrupt_test.rs  main.rs  panic.rs  synchronization.rs  syscall.rs  syscall_test.rs  tty.rs  tty_test.rs
src/arch/: mod.rs
src/arch/arm64/: mod.rs
src/arch/arm64/asm/: barrier.rs  mod.rs
src/arch/arm64/kernel/: common_setup.rs  head.S  head.rs  interrupt.S  interrupt.rs  interrupt_handle.rs
src/arch/arm64/metadata/: cpu.rs
src/asm/: barrier.rs  mod.rs
src/common/: bit.rs  bit_test.rs  error.rs  mod.rs  stream.rs  synchronization.rs
src/container/: arrayvec_extensions.rs  mod.rs  queue.rs  stack.rs  stack_test.rs
src/diagnostic/: board_info.rs  board_info_test.rs  gpio.rs  interrupt.rs  mailbox.rs  mod.rs  panic.rs  uart.rs  uart_interrupt.rs  videocore_base_clock.rs
src/interrupt/: bcm2837_interrupt.rs  macros.rs  mod.rs
src/io/: clock.rs  gpio.rs  mmio.rs  mock_uart.rs  mod.rs  uart.rs
src/io/gpio/: bcm2837_gpio.rs  mod.rs
src/io/mailbox/: macros.rs  message.rs  mod.rs  tag.rs
src/io/mmio/: arm64_generic_mmio.rs  mod.rs
src/io/uart/: bcm2837_pl011.rs  mock.rs  mod.rs
src/meta/: board_info.rs  cpu_info.rs  mod.rs
src/metadata/: board.rs  cpu.rs  mod.rs  network.rs
src/timer/: bcm2837_system_timer.rs  mod.rs
tools/pyserial/: serial_115200.sh
