[package]
name = "osdev"
version = "0.0.1"
edition = "2021"

[features]
default = []
host = []
device = []
aarch64 = []

[dependencies]
lazy_static = "1.4"

[profile.test]
features = ["host"]

[profile.dev]
features = ["device"]
panic = "abort"

[profile.release]
features = ["device"]
panic = "abort"
