[package]
name = "osdev"
version = "0.0.1"
edition = "2021"

[features]
default = []
host = []
device = []
aarch64 = []

[dependencies]
arrayvec = { version = "0.7.6", default-features = false, features = ["zeroize"] }

[build-dependencies]
cc = { version = "1.1.37", features = ["parallel"] }

[profile.test]
features = ["host"]

[profile.dev]
features = ["device"]
panic = "abort"

[profile.release]
features = ["device"]
panic = "abort"
